--- a/RayTracerTypeLibrary/RayTracerTypeLibrary.csproj
+++ b/RayTracerTypeLibrary/RayTracerTypeLibrary.csproj
@@ -42,6 +42,7 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <PlatformTarget>x86</PlatformTarget>
     <XnaCompressContent>true</XnaCompressContent>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
@@ -94,6 +95,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BoundingBoxExtensions.cs" />
     <Compile Include="Material.cs" />
     <Compile Include="RayExtensions.cs" />
     <Compile Include="Triangle.cs" />
