--- a/trunk/RayTraceProject/RayTraceProject/RayTraceProject.csproj
+++ b/trunk/RayTraceProject/RayTraceProject/RayTraceProject.csproj
@@ -39,7 +39,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\x86\Debug</OutputPath>
-    <DefineConstants>TRACE;DEBUG;WINDOWS -DEBUG_NORMALS</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;WINDOWS -DEBUG_NORMALS -DEBUG_CONVEXFLAG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoStdLib>true</NoStdLib>
@@ -111,6 +111,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
+    <Compile Include="Design\DesignObject.cs" />
+    <Compile Include="Design\Light.cs" />
+    <Compile Include="DirectionalLight.cs" />
+    <Compile Include="ILight.cs" />
     <Compile Include="List.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
@@ -120,6 +124,7 @@
     <Compile Include="Spatial\ISpatialBody.cs" />
     <Compile Include="Spatial\ISpatialManager.cs" />
     <Compile Include="Spatial\OctreeSpatialManager.cs" />
+    <Compile Include="SpotLight.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
